PD-548 update dashboard api (#178)
* Extract authentication methods into base API controller class

* Dashboard Update API and refactoring that I don’t like

* Only accept editable dashboard parameters
