# app/serializers/dashboard_serializer.rb
@@ -1,0 +1,9 @@
+class DashboardSerializer < ActiveModel::Serializer
+  attributes  :name,
+              :description,
+              :target_users,
+              :notes,
+              :url,
+              :published_at
+  
+end
